--- a/Web Pages/login.html
+++ b/Web Pages/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="Images/komodoLogo.png" alt="Logo" class="logo">
     </header>
     <div class="form-container login-box">
         <h2 class="form-title">Login</h2> <!-- Title inside the box -->
