--- a/Web Pages/login.html
+++ b/Web Pages/login.html
@@ -26,7 +26,7 @@
             </div>
         
 
-            <img src="giphy.gif" alt="Loading animation" class="gif">
+            <img src="Images/giphy.gif" alt="Loading animation" class="gif">
 
             <button type="submit" class="submit-button">Log In</button>
 
