--- a/Web Pages/register.html
+++ b/Web Pages/register.html
@@ -29,7 +29,7 @@
 
             <input type="text" placeholder="Access code (student & teacher)" required>
 
-            <img src="giphy.gif" alt="Loading animation" class="gif">
+            <img src="Images/giphy.gif" alt="Loading animation" class="gif">
 
             <button type="submit" class="submit-button">Register</button>
 
