Updated header and form box dimensions, revised image paths, removed the placeholder option in the dropdown, added an "Access code" input field, and made minor CSS adjustments for improved styling.

--- a/Web Pages/register.html
+++ b/Web Pages/register.html
@@ -11,7 +11,7 @@
         <img src="Images/komodoLogo.png" alt="Logo" class="logo">
     </header>
     <div class="form-container register-box">
-        <h2 class="form-title">Register to Komodo Hub</h2> <!-- Title inside the box -->
+        <h2 class="form-title">Register to Komodo Hub</h2>
         <form>
             <input type="text" placeholder="Name *" required>
             <input type="text" placeholder="Username *" required>
@@ -20,16 +20,15 @@
 
             <div class="dropdown">
                 <select required>
-                    <option value="" disabled selected></option> <!-- Placeholder -->
                     <option value="student">Student</option>
                     <option value="teacher">Teacher</option>
                     <option value="member">Member</option>
                 </select>
             </div>
-
+    
             <input type="text" placeholder="Access code (student & teacher)" required>
 
-            <img src="Images/giphy.gif" alt="Loading animation" class="gif">
+            <img src="giphy.gif" alt="Loading animation" class="gif">
 
             <button type="submit" class="submit-button">Register</button>
 
@@ -40,3 +39,4 @@
     </div>
 </body>
 </html>
+
