home page accessible from login and register

--- a/Web Pages/register.html
+++ b/Web Pages/register.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="Images/komodoLogo.png" alt="Logo" class="logo">
+        <a href="HomePage.html">
+            <img src="Images/komodoLogo.png" alt="Logo" class="logo">
+        </a>
     </header>
     <div class="form-container register-box">
         <h2 class="form-title">Register to Komodo Hub</h2>
