--- a/Web Pages/login.html
+++ b/Web Pages/login.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="Images/komodoLogo.png" alt="Logo" class="logo">
+        <a href="HomePage.html">
+            <img src="Images/komodoLogo.png" alt="Logo" class="logo">
+        </a>
     </header>
     <div class="form-container login-box">
         <h2 class="form-title">Login</h2> <!-- Title inside the box -->
