--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -21,7 +21,7 @@
             <a href="#">Games</a>
         </div>
         <div class="nav">
-            <a href="#">Profile</a>
+            <a href="LoginPage.html">Login</a>
         </div>
     </div>
 
