--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -14,31 +14,71 @@
     </header>
     <div class="form-container register-box">
         <h2 class="form-title">Register to Komodo Hub</h2>
-        <form>
+        <form id="registerForm">
             <input type="text" placeholder="Name *" required>
             <input type="text" placeholder="Username *" required>
             <input type="password" placeholder="Password *" required>
             <input type="password" placeholder="Confirm password *" required>
 
             <div class="dropdown">
-                <select required>
+                <select id="dropdown" required>
                     <option value="student">Student</option>
                     <option value="teacher">Teacher</option>
                     <option value="member">Member</option>
                 </select>
             </div>
     
-            <input type="text" placeholder="Access code (student & teacher)" required>
+            <input id="accessCode" type="text" placeholder="Access code" required>
 
             <img src="Images/giphy.gif" alt="Loading animation" class="gif">
 
-            <button type="submit" class="submit-button">Register</button>
+            <button id="submit" type="submit" class="submit-button">Register</button>
 
         </form>
         <p class="redirect">
             Already have an account? <a href="LoginPage.html">Login</a>
         </p>
     </div>
+
+    <script>
+        document.getElementById('dropdown').addEventListener('change', function () {
+            let selectedValue = this.value;
+            let accessCodeInput = document.getElementById('accessCode');
+            let button = document.getElementById('submit');
+
+            // Show/hide access code field based on selection
+            if (selectedValue === 'student' || selectedValue === 'teacher') {
+                accessCodeInput.style.display = 'block';
+                accessCodeInput.required = true;
+                button.textContent = 'Register';
+            }
+            else if (selectedValue === 'member') {
+                accessCodeInput.style.display = 'none';
+                accessCodeInput.required = false;
+                button.textContent = 'Go to Payment Page';
+            }
+            else {
+                accessCodeInput.style.display = 'none';
+                accessCodeInput.required = false;
+            }
+        });
+
+        document.getElementById('registerForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevents form from actually submitting
+
+            let userType = document.getElementById('dropdown').value;
+            
+            if (userType === 'member') {
+                window.location.href = 'HomePage.html'; // Redirects to member page
+            }
+            else if (userType === 'student' || userType === 'teacher') {
+                window.location.href = 'LoginPage.html'; // Redirects to student registration
+            }
+            else {
+                alert("Please select a valid user type!"); // Fallback in case no selection is made
+            }
+        });
+    </script>
 </body>
 </html>
 
