--- a/Web Pages/SchoolLibrary.html
+++ b/Web Pages/SchoolLibrary.html
@@ -28,7 +28,7 @@
             <div class="card" onclick="showModal('elephants')">
                 <div class="card-header">
                     <a href="profileA.html" class="profile-link">
-                        <img src="images/default-profile.jpg" alt="Profile" class="profile-img">
+                        <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
                         <div class="profile-info">
@@ -50,7 +50,7 @@
             <div class="card" onclick="showModal('rhinos')">
                 <div class="card-header">
                     <a href="profileB.html" class="profile-link">
-                        <img src="images/default-profile.jpg" alt="Profile" class="profile-img">
+                        <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
                         <div class="profile-info">
@@ -72,7 +72,7 @@
             <div class="card" onclick="showModal('tigers')">
                 <div class="card-header">
                     <a href="profileC.html" class="profile-link">
-                        <img src="images/default-profile.jpg" alt="Profile" class="profile-img">
+                        <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
                         <div class="profile-info">
