--- a/Web Pages/CommunityLibrary.html
+++ b/Web Pages/CommunityLibrary.html
@@ -119,4 +119,4 @@
     <button onclick="closeModal()">Close</button>
 </div>
 
-<script src="SchoolLibrary.js"></script>
+<script src="CommunityLibrary.js"></script>
