--- a/Web Pages/CommunityLibrary.html
+++ b/Web Pages/CommunityLibrary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Komodo Hub</title>
-    <link rel="stylesheet" href="CommunityLibrary.css">
+    <link rel="stylesheet" href="SchoolLibrary.css">
 </head>
 <body>
     <div class="navbar">
