Profile private/public view.. is it fixed now from your side?

--- a/Web Pages/ProfilePrivateView.html
+++ b/Web Pages/ProfilePrivateView.html
@@ -13,7 +13,8 @@
             <!-- Logo -->
             <img src="Images/komodoLogo.png" alt="Komodo Hub Logo" class="logo">
         </a>
-    
+        <div class="nav-center"></div>
+ 
         <a href="HomePage.html">
            <!-- Logout Button -->
            <button class="logout-button" onclick="logout()">Logout</button>
@@ -49,7 +50,7 @@
                     <img class="avatar" src="Images/frog-.png" data-avatar="frog" onclick="setAvatar(this)">
                 </div>
                 <!-- Save Avatar Button -->
-                <button onclick="saveAvatar()" class="btn blue">Save Avatar</button>
+                <button onclick="saveAvatar()" class="btn green">Save Avatar</button>
                 
                 <h3>Change Password</h3>
                 <div class="password-container">
@@ -57,7 +58,7 @@
                     <span class="toggle-password" onclick="togglePassword()">🙈</span>
                 </div>
                 <p id="passwordError" class="error-message"></p>
-                <button onclick="changePassword()" class="btn blue">Update Password</button>
+                <button onclick="changePassword()" class="btn green">Update Password</button>
                 </div>
         </div>
 
