refined navbar styling of login

--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="LoginRegister.css">
 </head>
 <body>
-    <header>
+    <div class="navbar">
         <a href="HomePage.html">
-            <img src="Images/komodoLogo.png" alt="Logo" class="logo">
+            <img src="images/komodoLogo.png" alt="Logo" class="logo">
         </a>
-    </header>
+        
+        <div class="nav-center">
+            <a href="CommunityLibrary.html"><button>Community Library</button></a>
+            <a href="SchoolLibrary.html"><button>School Library</button></a>
+            <a href="Post.html"><button>Post</button></a>
+            <a href="Games.html"><button>Games</button></a>
+        </div>
+    
+        <a href="LoginPage.html"><button class="login">Login</button></a>
+    </div>
     <div class="form-container login-box">
         <h2 class="form-title">Login</h2> <!-- Title inside the box -->
         <form id="registerForm">
