--- a/Web Pages/CommunityLibrary.html
+++ b/Web Pages/CommunityLibrary.html
@@ -27,7 +27,7 @@
             <!-- First Card -->
             <div class="card" onclick="showModal('elephants')">
                 <div class="card-header">
-                    <a href="profileA.html" class="profile-link">
+                    <a href="ProfilePublicView.html" class="profile-link">
                         <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
@@ -49,7 +49,7 @@
             <!-- Second Card -->
             <div class="card" onclick="showModal('rhinos')">
                 <div class="card-header">
-                    <a href="profileB.html" class="profile-link">
+                    <a href="ProfilePublicView.html" class="profile-link">
                         <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
@@ -71,7 +71,7 @@
             <!-- Third Card -->
             <div class="card" onclick="showModal('tigers')">
                 <div class="card-header">
-                    <a href="profileC.html" class="profile-link">
+                    <a href="ProfilePublicView.html" class="profile-link">
                         <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
