--- a/Web Pages/SchoolLibrary.html
+++ b/Web Pages/SchoolLibrary.html
@@ -27,13 +27,13 @@
             <!-- First Card -->
             <div class="card" onclick="showModal('elephants')">
                 <div class="card-header">
-                    <a href="profileA.html" class="profile-link">
+                    <a href="ProfilePublicView.html" class="profile-link">
                         <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
                         <div class="profile-info">
                             <span class="member-name">user1</span>
-                            <span class="member-type">Member</span>
+                            <span class="member-type">Teacher</span>
                         </div>
                         <div class="timestamp">
                             <span class="date">10 Feb 2025</span>
@@ -49,13 +49,13 @@
             <!-- Second Card -->
             <div class="card" onclick="showModal('rhinos')">
                 <div class="card-header">
-                    <a href="profileB.html" class="profile-link">
+                    <a href="ProfilePublicView.html" class="profile-link">
                         <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
                         <div class="profile-info">
                             <span class="member-name">user2</span>
-                            <span class="member-type">Member</span>
+                            <span class="member-type">Teacher</span>
                         </div>
                         <div class="timestamp">
                             <span class="date">10 Feb 2025</span>
@@ -71,13 +71,13 @@
             <!-- Third Card -->
             <div class="card" onclick="showModal('tigers')">
                 <div class="card-header">
-                    <a href="profileC.html" class="profile-link">
+                    <a href="ProfilePublicView.html" class="profile-link">
                         <img src="images/default.png" alt="Profile" class="profile-img">
                     </a>
                     <div class="card-info">
                         <div class="profile-info">
                             <span class="member-name">user3</span>
-                            <span class="member-type">Member</span>
+                            <span class="member-type">Teacher</span>
                         </div>
                         <div class="timestamp">
                             <span class="date">10 Feb 2025</span>
