updated home page and linked all pages together

--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -1,55 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Komodo Hub</title>
-    <link rel="stylesheet" href="HomePage.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Komodo Hub</title>
+  <link rel="stylesheet" href="HomePage.css" />
 </head>
 <body>
- 
-    <!-- Header -->
-    <div class="header">
-        <div class="logo">
-            <a href="HomePage.html">
-                <img src="Images/komodoLogo.png" alt="Komodo Hub Logo">
-            </a>
-        </div>
-        <div class="nav center-nav">
-            <a href="#">Library</a>
-            <a href="#">Posts</a>
-            <a href="#">Games</a>
-        </div>
-        <div class="nav">
-            <a href="LoginPage.html">Login</a>
-        </div>
+
+<div class="navbar">
+    <a href="HomePage.html">
+        <img src="images/komodoLogo.png" alt="Logo" class="logo">
+    </a>
+        
+    <div class="nav-center">
+        <a href="CommunityLibrary.html"><button>Community Library</button></a>
+        <a href="SchoolLibrary.html"><button>School Library</button></a>
+        <a href="Post.html"><button>Post</button></a>
+        <a href="Games.html"><button>Games</button></a>
+    </div>
+    <a href="LoginPage.html"><button class="login">Login</button></a>
+</div>
+
+
+  <div class="main">
+    <div class="main-content">
+      <div class="main-text">
+        <strong>Join the Conservation Movement – Protect Endangered Species!</strong><br><br>
+        Komodo Hub is a national digital platform supporting animal conservation efforts and connecting communities, 
+        schools, and conservationists to protect Indonesia’s unique wildlife. Through education, community involvement, 
+        and interactive conservation programs, we empower people to make a real impact.<br><br>
+        <p>
+        It helps to learn, share your posts, play games, and contribute to the protection of endangered animals. 
+        Join us in making a difference.
+        </p>
+    </div>
+    </div>
+    <img src="Images/hometiger.jpg" alt="Tiger" class="right-image" />
+  </div>
+
+  <!-- Footer -->
+  <div class="footer">
+
+    <!-- Follow us -->
+    <div class="footer-item follow">
+      <p>Follow us on:</p>
+      <div class="social-icons">
+        <a href="#"><img src="Images/facebook.png" alt="Facebook" /></a>
+        <a href="#"><img src="Images/insta.jpeg" alt="Instagram" /></a>
+        <a href="#"><img src="Images/x.png" alt="X" /></a>
+        <a href="#"><img src="Images/linkedin.png" alt="LinkedIn" /></a>
+      </div>
     </div>
 
-    <!-- Main Section -->
-    <div class="main">
-        <div class="main-content">
-            <p class="main-text">Komodo Hub is a digital space where you can learn, share your posts, play games, and contribute to the protection of endangered animals. Join us in making a difference.</p>
-        </div>
-        <img src="Images/hometiger.jpg" alt="Right Side Image" class="right-image">
+    <!-- Address -->
+    <div class="footer-item address">
+      <p>Komodo Hub</p>
+      <p>Priory Street,</p>
+      <p>Indonesia, IN15DO</p>
     </div>
 
-    <!-- About Us -->
-    <div class="about">
-        <h2>About Us</h2>
-        <p>Komodo Hub is located in Coventry University.</p>
-        <div class="contact">
-            <p>Email: komodohub@gmail.com</p>
-            <p>Phone: +123456789</p>
-        </div>
-        <div class="socials">
-            <p>Follow us on:</p>
-            <a href="#"><img src="Images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="Images/insta.jpeg" alt="Instagram"></a>
-            <a href="#"><img src="Images/youtube.png" alt="YouTube"></a>
-            <a href="#"><img src="Images/linkedin.png" alt="LinkedIn"></a>
-            <a href="#"><img src="Images/x.png" alt="X"></a>
-        </div>
+    <!-- Contact -->
+    <div class="footer-item contact">
+      <p>Contact Details:</p>
+      <p>komodohub@gmail.com</p>
+      <p>+62 1234567890</p>
     </div>
+
+    <!-- Disclaimers -->
+    <div class="footer-item disclaimers">
+      <p>©2025 Komodo Hub® is a nonprofit</p>
+      <p>organization. All rights reserved.</p>
+      <p>Privacy Policy | Terms of Use | State</p>
+      <p>Disclosures</p>
+      <p>Default cookies</p>
+    </div>
+
+  </div>
 
 </body>
 </html>
