Updated the animal database and also the flask on register

--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -107,7 +107,7 @@
 
                 if (response.ok) {
                     alert(result.message);
-                    window.location.href = 'LoginPage.html';
+                    window.location.href = 'Web Pages/LoginPage.html';
                 } else {
                     alert("Error: " + result.error);
                 }
