homepage page shows first why run main.py

--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Komodo Hub</title>
-  <link rel="stylesheet" href="HomePage.css" />
+  <link rel="stylesheet" href="/Web Pages/HomePage.css" />
 </head>
 <body>
 
 <div class="navbar">
-    <a href="HomePage.html">
-        <img src="images/komodoLogo.png" alt="Logo" class="logo">
+    <a href="/Web Pages/HomePage.html">
+        <img src="/Web Pages/images/komodoLogo.png" alt="Logo" class="logo">
     </a>
     <div class="nav-center">
-        <a href="CommunityLibrary.html"><button>Community Library</button></a>
-        <a href="SchoolLibrary.html"><button>School Library</button></a>
-        <a href="Post.html"><button>Post</button></a>
-        <a href="Games.html"><button>Games</button></a>
+        <a href="/Web Pages/CommunityLibrary.html"><button>Community Library</button></a>
+        <a href="/Web Pages/SchoolLibrary.html"><button>School Library</button></a>
+        <a href="/Web Pages/Post.html"><button>Post</button></a>
+        <a href="/Web Pages/Games.html"><button>Games</button></a>
     </div>
-    <a href="LoginPage.html"><button class="login">Login</button></a>
+    <a href="/Web Pages/LoginPage.html"><button class="login">Login</button></a>
 </div>
 
 
@@ -36,7 +36,7 @@
         </p>
     </div>
     </div>
-    <img src="Images/hometiger.jpg" alt="Tiger" class="right-image" />
+    <img src="/Web Pages/Images/hometiger.jpg" alt="Tiger" class="right-image" />
   </div>
 
   <!-- Footer -->
@@ -46,10 +46,10 @@
     <div class="footer-item follow">
       <p>Follow us on:</p>
       <div class="social-icons">
-        <a href="#"><img src="Images/facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="Images/insta.jpeg" alt="Instagram" /></a>
-        <a href="#"><img src="Images/x.png" alt="X" /></a>
-        <a href="#"><img src="Images/linkedin.png" alt="LinkedIn" /></a>
+        <a href="#"><img src="/Web Pages/Images/facebook.png" alt="Facebook" /></a>
+        <a href="#"><img src="/Web Pages/Images/insta.jpeg" alt="Instagram" /></a>
+        <a href="#"><img src="/Web Pages/Images/x.png" alt="X" /></a>
+        <a href="#"><img src="/Web Pages/Images/linkedin.png" alt="LinkedIn" /></a>
       </div>
     </div>
 
